fix: realigned element

--- a/components/IntroSkillOrbit/IntroSkillOrbit.module.scss
+++ b/components/IntroSkillOrbit/IntroSkillOrbit.module.scss
@@ -235,7 +235,7 @@
       cursor: pointer;
       position: absolute;
       top: 4rem;
-      right: 0;
+      right: 1rem;
       display: flex;
       gap: 0.5rem;
       color: rgba(178, 188, 196, 0.5);
